CaseFoldingHash::hash() doesn't handle 8 bit strings directly https://bugs.webkit.org/show_bug.cgi?id=76652

Reviewed by Andreas Kling.

* wtf/text/StringHash.h:
(WTF::CaseFoldingHash::hash): Added 8 bit string code path.


Canonical link: https://commits.webkit.org/94231@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106260 268f45cc-cd09-0410-ab3c-d52691b4dbfc